# nyuv

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  nyuv.desktop  update.json
common/: CMakeLists.txt
common/base/: cvtbase.h  defines.h  tools.h
common/utils/: CMakeLists.txt  buffer.h  extern.cpp  log.h  table.cpp  table.h  threadpool.cpp  threadpool.h
common/utils/spdlog/: spdlog.h
common/utils/spdlog/cfg/: env.h
common/utils/threadpool/: ThreadPool.h
cvts/: CMakeLists.txt  README.md  liblist.xml
cvts/Bayer16/: Bayer16.cpp  Bayer16.h  CMakeLists.txt  interface.cpp
cvts/Bayer8/: Bayer8.cpp  Bayer8.h  CMakeLists.txt  interface.cpp
cvts/Gray8/: CMakeLists.txt  Gray8.cpp  Gray8.h  interface.cpp
cvts/MIPI/: CMakeLists.txt  MIPI.cpp  MIPI.h  interface.cpp
cvts/RGB16/: CMakeLists.txt  RGB16.cpp  RGB16.h  interface.cpp
cvts/RGB8/: CMakeLists.txt  RGB8.cpp  RGB8.h  interface.cpp
cvts/YUV420SP/: CMakeLists.txt  YUV420SP.cpp  YUV420SP.h  interface.cpp
gui/: CMakeLists.txt  README.md  icon.qrc  main.cpp
gui/autocomplete/: .nyuv.config  CMakeLists.txt  README.md  autocomplete_config.cpp  autocomplete_config.h  autocomplete_format.cpp  autocomplete_format.h  autocomplete_utils.cpp  autocomplete_utils.h  autointerface.cpp  autointerface.h
gui/mywidgets/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  myFileTree.cpp  myFileTree.h  myInfoBar.cpp  myInfoBar.h  myInfoBarQFrame.h  myPrefer.cpp  myPrefer.h  myQImageviewer.cpp  myQImageviewer.h  myQLabel.h  myQScrollArea.h  myQSlider.h  myQSpinBox.h  myQWidget.h  update.cpp  update.h
gui/mywidgets/algo/: CMakeLists.txt  alight.cpp  alight.h  npea.cpp  npea.h  stats.cpp  stats.h
interface/: CMakeLists.txt  cvtinterface.cpp  cvtinterface.h  schedule.cpp  schedule.h
test/: CMakeLists.txt  data  testinterface.sh  testintreface.cpp
