ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/YUV420SP)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/RGB8)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/RGB16)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Bayer8)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Bayer16)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/MIPI)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/Gray8)