# set(CMAKE_CXX_STANDARD 11)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

find_package(Qt5 COMPONENTS Core Gui Widgets Network REQUIRED)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/autocomplete)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/mywidgets)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/mywidgets/algo)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/mywidgets)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/autocomplete)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/mywidgets/algo)

file(GLOB_RECURSE QRC_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.qrc)
set(QRC_SOURCE_FILES icon.qrc)
qt5_add_resources(QRC_FILES ${QRC_SOURCE_FILES})

add_executable(nyuv main.cpp ${QRC_FILES})
target_link_libraries(nyuv Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Network ${QT_QTNETWORK_LIBRARY} mywidgets utils cvtinterface autocomplete)

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/statics/nyuv.png DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})